--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <section class="form">
         <label for="todo-input">Add to your todo list!</label>
         <input class="todo-input "type="text" name="todo-input">
-        <button class=".add-todo">ADD</button>
+        <button class="add-todo">ADD</button>
         <label for="index-input">Remove an index from your todo list! (Counting from zero because coding.)</label>
         <input class="index-input "type="text" name="index-input">
-        <button class=".remove-todo">REMOVE</button>
+        <button class="remove-todo">REMOVE</button>
       </section>
       <ul class="todo-list"></ul>
     </div>
